--- a/index.html
+++ b/index.html
@@ -87,7 +87,13 @@
       <li> <a href="About.html">Go To Aout Page</a><br></li>
       <li> <a href="Contact.html">Go To Contact Page</a></li>
       </ul>
-
+      <h2>Movies Categories</h2>
+      <ul>
+        <li><a href="bollywood/bollywood.html">Bollywood</a></li>
+        <li><a href="bollywood/hollywood/hollywood.html">Hollywood</a></li>
+        <li><a href="bollywood/lollywood/lollywood.html">Lollywood</a></li>
+      </ul>
+           
   
   </body>
 </html>
